<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etA"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        android:hint="@string/enterA" />

    <EditText
        android:id="@+id/etB"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        android:hint="@string/enterB"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/add"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/subtraction"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/multiplication"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/division"
            android:layout_margin="4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/nave"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/navigation" />
    </LinearLayout>

</LinearLayout>