<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imMain"
        android:layout_width="111dp"
        android:layout_height="114dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/top_image" />

    <TextView
        android:id="@+id/tvHeaderText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/login"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/imMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:boxBackgroundColor="@color/blue"
        app:boxCornerRadiusTopStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:startIconDrawable="@drawable/account_circle_fill0_wght400_grad0_opsz24"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderText"
        app:layout_constraintStart_toStartOf="@id/tvHeaderText"
        app:layout_constraintEnd_toEndOf="@id/tvHeaderText"
        app:startIconTint="@color/darkBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/email"
        android:textColor="@color/darkBlue"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tilEmailText"
        app:layout_constraintBottom_toTopOf="@id/tilEmailText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:boxBackgroundColor="@color/blue"
        app:boxCornerRadiusTopStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:startIconDrawable= "@drawable/lock_fill0_wght400_grad0_opsz24"
        app:layout_constraintTop_toBottomOf="@id/tilEmailText"
        app:layout_constraintStart_toStartOf="@id/tilEmailText"
        app:layout_constraintEnd_toEndOf="@id/tilEmailText"
        app:passwordToggleTint="@color/darkBlue"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/darkBlue"
        android:background="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:inputType="textPassword"
            android:maxLength="10"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,VisualLintTextFieldSize"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/password"
        android:textColor="@color/darkBlue"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tilPasswordText"
        app:layout_constraintBottom_toTopOf="@id/tilPasswordText" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mbtgR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordText"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:checkedButton="@+id/dtnCompany">
        <Button
            android:id="@+id/dtnCompany"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/company"
            style="?attr/materialButtonOutlinedStyle"
            app:rippleColor="@color/darkBlue" />
        <Button
            android:id="@+id/dtnAdmin"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            style="?attr/materialButtonOutlinedStyle"
            app:rippleColor="@color/darkBlue" />
        <Button
            android:id="@+id/dtnClient"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/client"
            style="?attr/materialButtonOutlinedStyle"
            app:rippleColor="@color/darkBlue" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/loginBtn"
        app:layout_constraintEnd_toEndOf="@id/tilPasswordText"
        app:layout_constraintStart_toStartOf="@id/tilPasswordText"
        app:layout_constraintTop_toBottomOf="@id/mbtgR"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/forgetPassword"
        android:background="@android:color/transparent"
        android:textColor="@color/darkBlue"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvLoginQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginQuestion"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgetPassword"
        android:gravity="center"
        android:layout_marginStart="70dp"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/createAccount"
        android:textSize="11sp"
        android:textColor="@color/darkBlue"
        app:layout_constraintStart_toEndOf="@+id/tvLoginQuestion"
        app:layout_constraintTop_toTopOf="@+id/tvLoginQuestion"/>


</androidx.constraintlayout.widget.ConstraintLayout>
