<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verification"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/etTextCode1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:hint="@string/code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/btnVerify"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"/>

    <EditText
        android:id="@+id/etTextCode2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:hint="@string/code"
        app:layout_constraintStart_toEndOf="@id/etTextCode1"
        app:layout_constraintTop_toTopOf="@id/etTextCode1"
        app:layout_constraintBottom_toBottomOf="@id/etTextCode1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/etTextCode3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:hint="@string/code"
        app:layout_constraintStart_toEndOf="@id/etTextCode2"
        app:layout_constraintTop_toTopOf="@id/etTextCode2"
        app:layout_constraintBottom_toBottomOf="@id/etTextCode2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/etTextCode4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:hint="@string/code"
        app:layout_constraintStart_toEndOf="@id/etTextCode3"
        app:layout_constraintTop_toTopOf="@id/etTextCode3"
        app:layout_constraintBottom_toBottomOf="@id/etTextCode3"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Verificationbtn"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/etTextCode1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:padding="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
